[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MainUI.gd" type="Script" id=1]
[ext_resource path="res://art/resources/wheat-icon.png" type="Texture" id=2]
[ext_resource path="res://art/resources/timber-icon.png" type="Texture" id=3]
[ext_resource path="res://art/resources/stone-icon.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TopUIPanel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 66.0

[node name="DayLbl" type="Label" parent="TopUIPanel"]
margin_left = 1088.0
margin_top = 8.0
margin_right = 1264.0
margin_bottom = 22.0
text = "Day: 0"

[node name="PopulationLbl" type="Label" parent="TopUIPanel"]
margin_left = 456.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 22.0
text = "Population"

[node name="UnemployedLbl" type="Label" parent="TopUIPanel"]
margin_left = 640.0
margin_top = 8.0
margin_right = 816.0
margin_bottom = 22.0
text = "Unemployed:"

[node name="HealthLbl" type="Label" parent="TopUIPanel"]
margin_left = 456.0
margin_top = 32.0
margin_right = 504.0
margin_bottom = 46.0
text = "Health:"

[node name="HealthTxtLbl" type="Label" parent="TopUIPanel/HealthLbl"]
margin_left = 56.0
margin_right = 105.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 1, 0.27451, 1 )
text = "Healthy"

[node name="HappynessLbl" type="Label" parent="TopUIPanel"]
margin_left = 656.0
margin_top = 32.0
margin_right = 704.0
margin_bottom = 46.0
text = "Happiness:"

[node name="HappyTxtLbl" type="Label" parent="TopUIPanel/HappynessLbl"]
margin_left = 80.0
margin_right = 129.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 1, 0.27451, 1 )
text = "Ecstatic"

[node name="FoodLbl" type="Label" parent="TopUIPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 22.0
text = "Food"

[node name="SeasonLbl" type="Label" parent="TopUIPanel"]
margin_left = 1088.0
margin_top = 40.0
margin_right = 1264.0
margin_bottom = 54.0
text = "Season"

[node name="WaterLbl" type="Label" parent="TopUIPanel"]
margin_left = 8.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 46.0
text = "Water"

[node name="BottomUIPanel" type="Panel" parent="."]
margin_top = 616.0
margin_right = 1280.0
margin_bottom = 762.0

[node name="WheatSprite" type="Sprite" parent="BottomUIPanel"]
position = Vector2( 24, 24 )
texture = ExtResource( 2 )

[node name="WheatLbl" type="Label" parent="BottomUIPanel/WheatSprite"]
margin_left = 24.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 6.0
text = ":0"

[node name="StoneSprite" type="Sprite" parent="BottomUIPanel"]
position = Vector2( 24, 72 )
texture = ExtResource( 4 )

[node name="StoneLbl" type="Label" parent="BottomUIPanel/StoneSprite"]
margin_left = 24.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 6.0
text = ":0"

[node name="TimberSprite" type="Sprite" parent="BottomUIPanel"]
position = Vector2( 24, 120 )
texture = ExtResource( 3 )

[node name="TimberLbl" type="Label" parent="BottomUIPanel/TimberSprite"]
margin_left = 24.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 6.0
text = ":0"

[node name="ForageBtn" type="Button" parent="."]
margin_left = 8.0
margin_top = 88.0
margin_right = 72.0
margin_bottom = 108.0
text = "Forage"

[node name="BuildingPanel" type="Panel" parent="."]
self_modulate = Color( 0.0784314, 0, 0.984314, 0.313726 )
margin_left = 128.0
margin_top = 72.0
margin_right = 768.0
margin_bottom = 600.0

[node name="SmallHouseLbl" type="Label" parent="BuildingPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 94.0
margin_bottom = 22.0
text = "Small house: "

[node name="Button" type="Button" parent="BuildingPanel/SmallHouseLbl"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "+"

[node name="Button2" type="Button" parent="BuildingPanel/SmallHouseLbl"]
margin_left = 88.0
margin_right = 108.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="BuildingPanel/SmallHouseLbl"]
margin_left = 112.0
margin_right = 152.0
margin_bottom = 14.0
text = "0"
align = 1

[node name="LargeHouseLbl2" type="Label" parent="BuildingPanel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 94.0
margin_bottom = 54.0
text = "Large house: "

[node name="Button" type="Button" parent="BuildingPanel/LargeHouseLbl2"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "+"

[node name="Button2" type="Button" parent="BuildingPanel/LargeHouseLbl2"]
margin_left = 88.0
margin_right = 108.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="BuildingPanel/LargeHouseLbl2"]
margin_left = 112.0
margin_right = 152.0
margin_bottom = 14.0
text = "0"
align = 1

[node name="FamFarmLbl" type="Label" parent="BuildingPanel"]
margin_left = 8.0
margin_top = 72.0
margin_right = 94.0
margin_bottom = 86.0
text = "Family Farm: "

[node name="Button" type="Button" parent="BuildingPanel/FamFarmLbl"]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "+"

[node name="Button2" type="Button" parent="BuildingPanel/FamFarmLbl"]
margin_left = 88.0
margin_right = 108.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="BuildingPanel/FamFarmLbl"]
margin_left = 112.0
margin_right = 152.0
margin_bottom = 14.0
text = "0"
align = 1

[node name="PrimWellLbl" type="Label" parent="BuildingPanel"]
margin_left = 8.0
margin_top = 104.0
margin_right = 94.0
margin_bottom = 118.0
text = "Primitve Well: "

[node name="Button" type="Button" parent="BuildingPanel/PrimWellLbl"]
margin_left = 168.0
margin_right = 188.0
margin_bottom = 20.0
text = "+"

[node name="Button2" type="Button" parent="BuildingPanel/PrimWellLbl"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="BuildingPanel/PrimWellLbl"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 14.0
text = "0"
align = 1

[node name="TimberCampLbl" type="Label" parent="BuildingPanel"]
margin_left = 8.0
margin_top = 136.0
margin_right = 103.0
margin_bottom = 150.0
text = "Timber Camp:"

[node name="Button" type="Button" parent="BuildingPanel/TimberCampLbl"]
margin_left = 168.0
margin_right = 188.0
margin_bottom = 20.0
text = "+"

[node name="Button2" type="Button" parent="BuildingPanel/TimberCampLbl"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 20.0
text = "-"

[node name="Label" type="Label" parent="BuildingPanel/TimberCampLbl"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 14.0
text = "0"
align = 1

[node name="EventPanel" type="Panel" parent="."]
self_modulate = Color( 0.0784314, 0, 0.984314, 0.313726 )
margin_left = 904.0
margin_top = 72.0
margin_right = 1272.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="EventPanel"]
margin_left = 8.0
margin_top = 32.0
margin_right = 232.0
margin_bottom = 46.0
text = "Day 8: This is where events will go."

[node name="Label5" type="Label" parent="EventPanel"]
margin_left = 8.0
margin_top = 56.0
margin_right = 232.0
margin_bottom = 70.0
text = "Day 7: Sometimes accompanied by a popup or action."

[node name="Label2" type="Label" parent="EventPanel"]
margin_left = 8.0
margin_top = 80.0
margin_right = 223.0
margin_bottom = 94.0
text = "Day 5: Listed descending like this"

[node name="Label3" type="Label" parent="EventPanel"]
margin_left = 8.0
margin_top = 104.0
margin_right = 278.0
margin_bottom = 118.0
text = "Day 3: Stuff like getting attacked or raided."

[node name="Label4" type="Label" parent="EventPanel"]
margin_left = 8.0
margin_top = 128.0
margin_right = 278.0
margin_bottom = 142.0
text = "Day 1: Or other events in the city."

[connection signal="pressed" from="ForageBtn" to="." method="_on_ForageBtn_pressed"]
[connection signal="pressed" from="BuildingPanel/TimberCampLbl/Button" to="." method="_on_Button_pressed"]
